Add PlayTextAudio-component to Q&ASet-component + handle translations differently

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -29,7 +29,7 @@
                [(isSubmitted)]="hasAnswered"
                [(isEditing)]="hasChangedAnswers"
                (submit)="submit($event)"
-               [submitLabel]="'personal.enroll-in-program.submit'|translate"
+               submitLabel="personal.enroll-in-program.submit"
   ></q-and-a-set>
 
   <dialogue-turn [actor]="programDetails?.ngo"
