--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -55,7 +55,7 @@
                  [(isSubmitted)]="isSubmitted"
                  [(isEditing)]="isEditing"
                  (submit)="submitCustomAttributes($event)"
-                 [submitLabel]="'personal.select-fsp.attributes.submit'|translate"
+                 submitLabel="personal.select-fsp.attributes.submit"
     ></q-and-a-set>
 
     <dialogue-turn *ngIf="showResultSuccess"
