--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -92,13 +92,15 @@
                *ngIf="!checkValidationErrors() && allQuestionsShown"
                [isSpoken]="!checkValidationErrors() && allQuestionsShown"
 >
-  <p>
+  <ion-row class="ion-nowrap ion-align-items-center">
+    <play-text-audio [key]="submitLabel"></play-text-audio>
     <ion-button type="submit"
                 (click)="doSubmit()"
                 [disabled]="isSubmitted"
                 expand="block"
+                style="flex-basis:100%;"
     >
-      {{ submitLabel }}
+      {{ submitLabel|translate }}
     </ion-button>
-  </p>
+  </ion-row>
 </dialogue-turn>
