Make PlayTextAudio-component always visible during development (+configurable)

--- a/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
+++ b/interfaces/PA-App/src/app/shared/play-text-audio/play-text-audio.component.html
@@ -1,5 +1,5 @@
 
-<ion-button *ngIf="!isDisabled"
+<ion-button *ngIf="!isDisabled || alwaysVisible"
             type="button"
             color="tertiary"
             shape="round"
