--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -12,16 +12,10 @@
       {{ 'personal.enroll-in-program.introduction-questions'|translate }}
     </div>
 
-    <ion-row class="ion-nowrap ion-align-items-center">
-      <play-text-audio key="personal.enroll-in-program.more-info-questions"></play-text-audio>
-      <more-info-button [message]="'personal.enroll-in-program.info-message'|translate"
-                        messageKey="personal.enroll-in-program.info-message"
-                        [heading]="'personal.enroll-in-program.more-info-questions'|translate"
-                        headingKey="personal.enroll-in-program.more-info-questions"
-      >
-        {{ 'personal.enroll-in-program.more-info-questions'|translate }}
-      </more-info-button>
-    </ion-row>
+    <more-info-button buttonKey="personal.enroll-in-program.more-info-questions"
+                      messageKey="personal.enroll-in-program.info-message"
+                      headingKey="personal.enroll-in-program.more-info-questions"
+    ></more-info-button>
   </dialogue-turn>
 
   <q-and-a-set [questions]="questions"
@@ -49,16 +43,12 @@
     <p>
       {{ 'personal.enroll-in-program.please-confirm'|translate }}
     </p>
-    <ion-row class="ion-nowrap ion-align-items-center ion-margin-top">
-      <play-text-audio key="personal.enroll-in-program.more-info-share"></play-text-audio>
-      <more-info-button [message]="'personal.enroll-in-program.info-message-share'|translate"
-                        messageKey="prsonal.enroll-in-program.info-message-share"
-                        [heading]="'personal.enroll-in-program.more-info-share'|translate"
+    <p>
+      <more-info-button buttonKey="personal.enroll-in-program.more-info-share"
+                        messageKey="personal.enroll-in-program.info-message-share"
                         headingKey="personal.enroll-in-program.more-info-share"
-      >
-        {{ 'personal.enroll-in-program.more-info-share'|translate }}
-      </more-info-button>
-    </ion-row>
+      ></more-info-button>
+    </p>
   </dialogue-turn>
   <dialogue-turn actor="self"
                  *ngIf="hasAnswered"
