--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -3,13 +3,10 @@
     <play-text-audio key="personal.select-language.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
     <p [innerHTML]="'personal.select-language.introduction'|translate"></p>
     <p>
-      <more-info-button [message]="'personal.select-language.info-message'|translate"
+      <more-info-button buttonKey="personal.select-language.more-info"
                         messageKey="personal.select-language.info-message"
-                        [heading]="'personal.select-language.more-info'|translate"
                         headingKey="personal.select-language.more-info"
-      >
-        {{ 'personal.select-language.more-info'|translate }}
-      </more-info-button>
+      ></more-info-button>
     </p>
   </dialogue-turn>
   <dialogue-turn actor="self"
