--- a/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
+++ b/interfaces/PA-App/src/app/shared/more-info-button/more-info-button.component.html
@@ -1,9 +1,13 @@
-<ion-button type="button"
-            size="small"
-            (click)="openInfoPopup()"
->
-  <ion-icon name="information-circle-outline" slot="start"></ion-icon>
+<ion-row class="ion-nowrap ion-align-items-center">
+  <play-text-audio [key]="buttonKey"></play-text-audio>
+  <ion-button type="button"
+              size="small"
+              (click)="openInfoPopup()"
+  >
+    <ion-icon name="information-circle-outline" slot="start"></ion-icon>
 
-  <ng-content></ng-content>
+    <ng-container *ngIf="buttonKey">{{ buttonKey|translate }}</ng-container>
+    <ng-content *ngIf="!buttonKey"></ng-content>
 
-</ion-button>
+  </ion-button>
+</ion-row>
