--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -1,4 +1,4 @@
-<section #createIdentity>
+<section>
     <dialogue-turn>
       <play-text-audio key="personal.create-identity.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
@@ -55,19 +55,24 @@
                         [disabled]="isDisabled"
             ></ion-input>
           </div>
-          <div class="ion-margin-top">
-            <ion-button *ngIf="username && !usernameSubmitted"
-                        [disabled]="usernameSubmitted || isDisabled"
+          <ion-row *ngIf="username && !usernameSubmitted"
+                   class="ion-nowrap ion-align-items-center ion-margin-top"
+          >
+            <play-text-audio key="personal.create-identity.submit-username"></play-text-audio>
+            <ion-button [disabled]="usernameSubmitted || isDisabled"
                         type="submit"
                         expand="block"
+                        style="flex-basis:100%"
             >{{ 'personal.create-identity.submit-username'|translate }}</ion-button>
-          </div>
+          </ion-row>
         </div>
         <div *ngIf="usernameSubmitted || useLocalStorage"
              class="ion-margin-vertical"
         >
-          <play-text-audio key="personal.create-identity.create-password-explanation" class="ion-margin-end"></play-text-audio>
-          <p>{{ 'personal.create-identity.create-password-explanation'|translate:{ minimalLength: passwordMinLength } }}</p>
+          <p>
+            <play-text-audio key="personal.create-identity.create-password-explanation" class="ion-margin-end"></play-text-audio>
+            {{ 'personal.create-identity.create-password-explanation'|translate:{ minimalLength: passwordMinLength } }}
+          </p>
           <password-toggle-input name="create"
                                  [(ngModel)]="create"
                                  ngDefaultControl
@@ -79,17 +84,20 @@
                                  [labelHide]="'password-toggle.hide'|translate"
                                  [(isValid)]="createIsValid"
           ></password-toggle-input>
-          <div class="ion-margin-top">
-            <div *ngIf="createIsValid === false">
-              <play-text-audio key="personal.create-identity.password-too-short" class="ion-margin-end"></play-text-audio>
-              <p>{{ 'personal.create-identity.password-too-short'|translate:{ minimalLength: passwordMinLength } }}</p>
-            </div>
-            <ion-button *ngIf="create && !initialInput"
-                        [disabled]="!createIsValid || initialInput || isDisabled"
+          <div *ngIf="createIsValid === false" class="ion-margin-vertical">
+            <play-text-audio key="personal.create-identity.password-too-short" class="ion-margin-end"></play-text-audio>
+            <p>{{ 'personal.create-identity.password-too-short'|translate:{ minimalLength: passwordMinLength } }}</p>
+          </div>
+          <ion-row *ngIf="create && !initialInput"
+                   class="ion-nowrap ion-align-items-center ion-margin-top"
+          >
+            <play-text-audio key="personal.create-identity.submit-password"></play-text-audio>
+            <ion-button [disabled]="!createIsValid || initialInput || isDisabled"
                         type="submit"
                         expand="block"
+                        style="flex-basis:100%"
             >{{ 'personal.create-identity.submit-password'|translate }}</ion-button>
-          </div>
+          </ion-row>
         </div>
 
         <div *ngIf="initialInput">
@@ -104,13 +112,16 @@
                                  [labelShow]="'password-toggle.show'|translate"
                                  [labelHide]="'password-toggle.hide'|translate"
           ></password-toggle-input>
-          <div class="ion-margin-top">
-            <ion-button *ngIf="create && confirm && !isDisabled"
-                        [disabled]="isInProgress || isDisabled"
+          <ion-row *ngIf="create && confirm && !isDisabled"
+                   class="ion-nowrap ion-align-items-center ion-margin-top"
+          >
+            <play-text-audio key="personal.create-identity.submit-password"></play-text-audio>
+            <ion-button [disabled]="isInProgress || isDisabled"
                         type="submit"
                         expand="block"
+                        style="flex-basis:100%"
             >{{ 'personal.create-identity.submit-password'|translate }}</ion-button>
-          </div>
+          </ion-row>
         </div>
       </form>
     </dialogue-turn>
