Add PlayTextAudio-components to generic submit-buttons

--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -25,13 +25,16 @@
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <p class="ion-margin-top">
+      <ion-row *ngIf="fspChoice && !fspSubmitted"
+               class="ion-nowrap ion-align-items-center ion-margin-top"
+      >
+        <play-text-audio key="shared.submit-button"></play-text-audio>
         <ion-button type="submit"
-                     *ngIf="fspChoice && !fspSubmitted"
                     [disabled]="fspSubmitted || isDisabled"
                     expand="block"
+                    style="flex-basis:100%"
         >{{ 'shared.submit-button'|translate }}</ion-button>
-      </p>
+      </ion-row>
     </form>
   </dialogue-turn>
   <dialogue-turn [actor]="program?.ngo"
