--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -19,12 +19,15 @@
           ></ion-radio>
         </ion-item>
       </ion-radio-group>
-      <div class="ion-margin-top">
+      <ion-row *ngIf="countryChoice && !isDisabled"
+               class="ion-nowrap ion-align-items-center ion-margin-top"
+      >
+        <play-text-audio key="shared.submit-button"></play-text-audio>
         <ion-button type="submit"
-                    *ngIf="countryChoice && !isDisabled"
                     expand="block"
+                    style="flex-basis:100%"
         >{{ 'shared.submit-button'|translate }}</ion-button>
-      </div>
+      </ion-row>
     </form>
   </dialogue-turn>
   <dialogue-turn *ngIf="isDisabled"
