--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -1,5 +1,6 @@
 <section>
   <dialogue-turn [actor]="program?.ngo">
+    <play-text-audio key="personal.select-fsp.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
     <p>
       {{ 'personal.select-fsp.introduction'|translate }}
     </p>
@@ -41,6 +42,7 @@
                  *ngIf="fspSubmitted"
                  [isSpoken]="fspSubmitted"
   >
+    <play-text-audio key="personal.select-fsp.conclusion" class="ion-float-end ion-margin-start"></play-text-audio>
     <p [innerHTML]="'personal.select-fsp.conclusion'|translate:{ name:chosenFsp?.fsp }"></p>
   </dialogue-turn>
 
@@ -48,6 +50,7 @@
     <dialogue-turn isConnected="true"
                    isSpoken="true"
     >
+      <play-text-audio key="personal.select-fsp.attributes.introduction" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.select-fsp.attributes.introduction'|translate }}
       </p>
@@ -64,6 +67,7 @@
     <dialogue-turn *ngIf="showResultSuccess"
                    [isSpoken]="showResultSuccess"
     >
+      <play-text-audio key="personal.select-fsp.attributes.success" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.select-fsp.attributes.success'|translate }}
       </p>
@@ -71,6 +75,7 @@
     <dialogue-turn *ngIf="showResultError"
                    [isSpoken]="showResultError"
     >
+      <play-text-audio key="personal.select-fsp.attributes.error" class="ion-float-end ion-margin-start"></play-text-audio>
       <p>
         {{ 'personal.select-fsp.attributes.error'|translate }}
       </p>
