Add PlayTextAudio-component to "store-credential"-component

--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -3,6 +3,7 @@
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
+    <play-text-audio key="personal.store-credential.done" class="ion-float-end ion-margin-start"></play-text-audio>
     <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo: currentProgram?.ngo }"></p>
   </dialogue-turn>
   <br>
@@ -12,7 +13,8 @@
                  [isSpoken]="credentialReceived"
                  isConnected="true"
   >
-  <p>
+    <play-text-audio key="personal.store-credential.received" class="ion-float-end ion-margin-start"></play-text-audio>
+    <p>
       {{ 'personal.store-credential.received'|translate }}
     </p>
   </dialogue-turn>
@@ -21,6 +23,7 @@
                  [isSpoken]="credentialStored"
                  isConnected="true"
   >
+    <play-text-audio key="personal.store-credential.stored" class="ion-float-end ion-margin-start"></play-text-audio>
     <p>
       {{ 'personal.store-credential.stored'|translate }}
     </p>
